91 register restaurant service (valid) (#122)
* Revert "Revert "91 register restaurant service" (#121)"

This reverts commit 3a2aa52e1fb5b1cdef99810bd3aa30e00f8ece1d.

* start service implementation

* continue service implementation

* service implemented

* fixing handler test

* updated api design

* updated workflow
